@@ -102,7 +102,9 @@ Version 5.0.9
     just a constructor (Bug #32093)  
   - fixed problem where a syntax error in a set of batch statements could leave the data adapter in a state
     that appears hung (bug #31930)
-                        
+  - fixed the MySqlException class to set the server error code in the Data[] hash so that 
+    DbProviderFactory users can access the server error code (Bug #27436) 
+                            
 Version 5.0.8  8/16/2007
   Bug #28706 Log messages are truncated  
   - Fixed a problem with compression over a network.  We were letting the inflate stream read
